# basic-staking-solana

./: .gitignore  README.md  a7vXRjX1yTq7LwATvpjapvMgqpET3rteiwo9o8JhAYh.json  a7vp4mvuhSkf2FTq2TLSrzwaogVKdd2Gf6BiXXLZZk9.json  test2.json  titnyTpaGdEdwCGxCNNXjGMXBTjwWRpJEeS87iL3sfY.json
cli/: Cargo.toml
cli/src/: main.rs
client/src/: main.rs
js/: craco.config.js  package-lock.json  package.json
js/src/: App.js  connection.ts  index.ts  staking.ts
js_node/: package.json
program/: Cargo.toml
program/src/: lib.rs
test/: craco.config.js  package.json  tsconfig.json
test-ui/: package.json
test-ui/src/: App.js  staking.ts
test-ui/src/borsh/: index.js
test/src/: App.js  App.tsx  staking.ts
