[package]
name = "simple-staking-program"
version = "0.1.0"
description = "Staking NFT"
authors = ["Ser Frae<a@serfrae.com>"]
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.8.0"
borsh = "0.9.0"
borsh-derive = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
spl-associated-token-account = {version = "1.0.3", features = [ "no-entrypoint" ]}
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "=1.8.0"
solana-sdk = "=1.8.0"

[lib]
name = "staking"
crate-type = ["cdylib", "lib"]
